--- a/Module1/Mentoring.Core.Module1/package.json
+++ b/Module1/Mentoring.Core.Module1/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "bootstrap": "^4.3.1",
     "jquery": "^3.3.1",
-    "jquery-ajax-unobtrusive": "^3.2.6"
+    "jquery-validation": "^1.19.0",
+    "jquery-validation-unobtrusive": "^3.2.11"
   }
 }
