--- a/Module1/Mentoring.Core.Module1/Mentoring.Core.Module1.csproj
+++ b/Module1/Mentoring.Core.Module1/Mentoring.Core.Module1.csproj
@@ -16,9 +16,15 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="8.0.0" />
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="6.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.1.2" PrivateAssets="All" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Mentoring.Core.Data\Mentoring.Core.Data.csproj" />
   </ItemGroup>
 
 </Project>
