--- a/Module1/Mentoring.Core.Module1/appsettings.json
+++ b/Module1/Mentoring.Core.Module1/appsettings.json
@@ -1,5 +1,6 @@
 {
-  "PageSize": 100,
+  "PageSize": 50,
+  "garbageSize": 78,
   "ConnectionStrings": {
     "Northwind": "Server=(localdb)\\MSSQLLocalDB;Database=Northwind;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
