--- a/Module1/Mentoring.Core.Module1/appsettings.json
+++ b/Module1/Mentoring.Core.Module1/appsettings.json
@@ -1,7 +1,13 @@
 {
   "PageSize": 50,
   "garbageSize": 78,
+  "ActionLogging": true, 
   "ConnectionStrings": {
     "Northwind": "Server=(localdb)\\MSSQLLocalDB;Database=Northwind;Trusted_Connection=True;MultipleActiveResultSets=true"
-  }
+  },
+  "ImageCache": {
+    "DirectoryPath": "picCache",
+    "MaxImagesCached": 5,
+    "ExpirationTime": "00:05:00"
+  } 
 }
